@@ -18,6 +18,7 @@ Version 1.0 to be released
 - Added CDbConnection::emulatePrepare (Qiang)
 - Added CWebApplication::clientScript and removed CController::clientScript (Qiang)
 - Added roles support to CAccessControlFilter (Qiang)
+- Added cross-site request forgery prevention (Wei, Qiang)
 - Refactored UserIdentity generated by yiic webapp (Qiang)
 - Refactored CLinkPager (Qiang)
 - Refactored CFilter (Qiang)
